# regex-engine

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PROJECT_SUMMARY.md  README.md  RegexEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  benchmark.vcxproj  benchmark.vcxproj.filters  gnu_grep_test.vcxproj  gnu_grep_test.vcxproj.filters  regex_api_test.vcxproj  regex_api_test.vcxproj.filters  regex_capture_test.vcxproj  regex_capture_test.vcxproj.filters  regex_core.vcxproj  regex_core.vcxproj.filters  regex_dfa_test.vcxproj  regex_dfa_test.vcxproj.filters  regex_engine.vcxproj  regex_engine.vcxproj.filters  regex_grep_test.vcxproj  regex_grep_test.vcxproj.filters  regex_hopcroft_test.vcxproj  regex_hopcroft_test.vcxproj.filters  regex_matcher_test.vcxproj  regex_matcher_test.vcxproj.filters  regex_nfa_test.vcxproj  regex_nfa_test.vcxproj.filters  regex_parser_test.vcxproj  regex_parser_test.vcxproj.filters  regex_posix_test.vcxproj  regex_posix_test.vcxproj.filters  regex_tokenizer_test.vcxproj  regex_tokenizer_test.vcxproj.filters  run_gnu_grep_tests.vcxproj  (+8 more)
DOT/: report.html
include/: capture.h  dfa.h  hopcroft.h  matcher.h  nfa.h  parser.h  posix_compat.h  tokenizer.h
log/: README.md  audit-20260705-2330.md  summary-20260705-1400.md  summary-20260705-1500.md  summary-20260705-1600.md  summary-20260705-1700.md  summary-20260705-1800.md  summary-20260705-1900.md  summary-20260705-2000.md  summary-20260705-2100.md  summary-20260705-2200.md  summary-20260705-2300.md  summary-20260706-0000.md  summary-20260706-0052.md  summary-20260706-0100.md  summary-20260706-0115.md  summary-20260706-0130.md  summary-20260706-0200.md  summary-20260706-0230.md  summary-20260709-iter1.md  summary-20260709-iter10.md  summary-20260709-iter11.md  summary-20260709-iter12.md  summary-20260709-iter2.md  summary-20260709-iter3.md  summary-20260709-iter4.md  summary-20260709-iter5.md  summary-20260709-iter6.md  summary-20260709-iter7.md  summary-20260709-iter8.md  summary-20260709-iter9.md  summary-audit-20260706.md  summary-audit-fix-20260708.md
src/: api.c  capture.c  dfa.c  hopcroft.c  main.c  matcher.c  nfa.c  parser.c  posix_compat.c  tokenizer.c
tests/: BENCHMARK_CHANGES.md  bench_all.c  benchmark.c  dot_gen.c  grep_test_runner.c  posix_benchmark.c  posix_compare.c  posix_system_bench.c  test_api.c  test_benchmark.c  test_capture.c  test_dfa.c  test_grep.c  test_hopcroft.c  test_matcher.c  test_parser.c  test_posix_compat.c  test_runner.c  test_tokenizer.c
tests/grep_tests/: README.md  anchors.txt  basic.txt  character_classes.txt  escape.txt  quantifiers.txt
